--- a/sources/data_legislative/connection.yaml
+++ b/sources/data_legislative/connection.yaml
@@ -1,5 +1,5 @@
 # This file was automatically generated
-name: needful_things
+name: data_legislative
 type: duckdb
 options:
-  filename: needful_things.duckdb
+  filename: data.duckdb
